--- a/index.html
+++ b/index.html
@@ -1,28 +1,54 @@
 <!doctype html>
-
-<!-- Version 0.0.1 -->
-<html lang="en">
-	
+<html>
 	<head>
-	
-		<title>Index.html | TT284</title>
-	
+		<title>index.html</title>
+		<link rel="stylesheet" href="res\css\style.css">
 	</head>
-	
 	<body>
-	
 		<header>
-			
+			<nav class="navbar-topMenu">
+				<ul>
+					<li class="nav-topMenu-item">
+						<a href="#">
+							<img src="res\images\imageSmallSquare.jpg"></img>
+							<span>Home</span>
+						</a>
+					</li>
+					<li class="nav-topMenu-item">
+						<a href="#">
+							<img src="res\images\imageSmallSquare.jpg"></img>
+							<span>Walks</span>
+						</a>
+					</li>
+					<li class="nav-topMenu-item">
+						<a href="#">
+							<img src="res\images\imageSmallSquare.jpg"></img>
+							<span>Settings</span>
+						</a>
+					</li>
+				</ul>
+			</nav>
 		</header>
-		
+
+		<nav class="nav-mainMenu">
+			<ul>
+				<li></li>
+				<li></li>
+			</ul>
+		</nav>
+
 		<main>
-			
+
+			<section>
+
+			</section>
+			<aside>
+
+			</aside>
 		</main>
-		
+
 		<footer>
-		
+
 		</footer>
-		
 	</body>
-	
 </html>
