Completed Wireframe (Profile Edit)
Wireframe for the profile edit has been completed. Might revist though to remove some whitespace

--- a/memberProfile.html
+++ b/memberProfile.html
@@ -19,7 +19,7 @@
             <span>Home</span>
           </a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item nav-item-active">
           <a class="nav-link" href="members.html">
             <img src="res/imgs/imageSmallSquare.jpg" alt="">
             <span>Members</span>
@@ -39,7 +39,6 @@
         </li>
       </ul>
     </nav>
-
     <main>
       <div class="container">
         <section id="editProfile">
@@ -66,9 +65,22 @@
         </section>
         <aside class="profileInformation">
           <div class="sectionHeader">
-            <h1>Profile Information</h1>
+            <h1>Profile Stats</h1>
           </div>
-
+          <div class="content-vertical">
+            <figure>
+              <img src="res/imgs/imageWideRectangle.jpg" alt="">
+              <figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit</figcaption>
+            </figure>
+            <figure>
+              <img src="res/imgs/imageWideRectangle.jpg" alt="">
+              <figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit</figcaption>
+            </figure>
+            <figure>
+              <img src="res/imgs/imageWideRectangle.jpg" alt="">
+              <figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit</figcaption>
+            </figure>
+          </div>
         </aside>
         <section id="walkingStats">
           <div class="sectionHeader">
