Wireframe progress (Announcements + Events)
Partial design of the wireframes for the announcements and events page

--- a/members.html
+++ b/members.html
@@ -112,7 +112,7 @@
               <td class="active">Active</td>
               <td>
                 <div class="buttonGroup">
-                  <button class="btn-edit" type="button" name="button">Edit</button>
+                  <button class="btn-edit" type="button" name="button"><a href="memberProfile.html">Edit</a></button>
                   <button class="btn-deny" type="button" name="button">Delete</button>
                 </div>
               </td>
@@ -125,7 +125,7 @@
               <td class="semi-active">Semi-Active</td>
               <td>
                 <div class="buttonGroup">
-                  <button class="btn-edit" type="button" name="button">Edit</button>
+                  <button class="btn-edit" type="button" name="button"><a href="memberProfile.html">Edit</a></button>
                   <button class="btn-deny" type="button" name="button">Delete</button>
                 </div>
               </td>
@@ -138,7 +138,7 @@
               <td class="inactive">InActive</td>
               <td>
                 <div class="buttonGroup">
-                  <button class="btn-edit" type="button" name="button">Edit</button>
+                  <button class="btn-edit" type="button" name="button"><a href="memberProfile.html">Edit</a></button>
                   <button class="btn-deny" type="button" name="button">Delete</button>
                 </div>
               </td>
@@ -151,7 +151,7 @@
               <td class="active">Active</td>
               <td>
                 <div class="buttonGroup">
-                  <button class="btn-edit" type="button" name="button">Edit</button>
+                  <button class="btn-edit" type="button" name="button"><a href="memberProfile.html">Edit</a></button>
                   <button class="btn-deny" type="button" name="button">Delete</button>
                 </div>
               </td>
@@ -164,7 +164,7 @@
               <td class="semi-active">Semi-Active</td>
               <td>
                 <div class="buttonGroup">
-                  <button class="btn-edit" type="button" name="button">Edit</button>
+                  <button class="btn-edit" type="button" name="button"><a href="memberProfile.html">Edit</a></button>
                   <button class="btn-deny" type="button" name="button">Delete</button>
                 </div>
               </td>
@@ -177,7 +177,7 @@
               <td class="inactive">InActive</td>
               <td>
                 <div class="buttonGroup">
-                  <button class="btn-edit" type="button" name="button">Edit</button>
+                  <button class="btn-edit" type="button" name="button"><a href="memberProfile.html">Edit</a></button>
                   <button class="btn-deny" type="button" name="button">Delete</button>
                 </div>
               </td>
@@ -190,7 +190,7 @@
               <td class="active">Active</td>
               <td>
                 <div class="buttonGroup">
-                  <button class="btn-edit" type="button" name="button">Edit</button>
+                  <button class="btn-edit" type="button" name="button"><a href="memberProfile.html">Edit</a></button>
                   <button class="btn-deny" type="button" name="button">Delete</button>
                 </div>
               </td>
@@ -203,7 +203,7 @@
               <td class="semi-active">Semi-Active</td>
               <td>
                 <div class="buttonGroup">
-                  <button class="btn-edit" type="button" name="button">Edit</button>
+                  <button class="btn-edit" type="button" name="button"><a href="memberProfile.html">Edit</a></button>
                   <button class="btn-deny" type="button" name="button">Delete</button>
                 </div>
               </td>
@@ -216,7 +216,7 @@
               <td class="inactive">InActive</td>
               <td>
                 <div class="buttonGroup">
-                  <button class="btn-edit" type="button" name="button">Edit</button>
+                  <button class="btn-edit" type="button" name="button"><a href="memberProfile.html">Edit</a></button>
                   <button class="btn-deny" type="button" name="button">Delete</button>
                 </div>
               </td>
