--- a/index1.html
+++ b/index1.html
@@ -6,32 +6,55 @@
     <link rel="stylesheet" href="res/css/style.css">
   </head>
   <body>
-    <aside>
-      <nav class="nav-mainMenu">
-        <ul class="nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <img src="res/imgs/imageSmallSquare.jpg" alt="">
-              <span>Home</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <img src="res/imgs/imageSmallSquare.jpg" alt="">
-              <span>Members</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <img src="res/imgs/imageSmallSquare.jpg" alt="">
-              <span>E</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </aside>
+    <nav class="nav-mainMenu">
+      <ul class="nav">
+        <li class="nav-logo">
+          <a href="#">
+            <img src="res/imgs/imageLargeSquare.jpg" alt="">
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">
+            <img src="res/imgs/imageSmallSquare.jpg" alt="">
+            <span>Home</span>
+          </a>
+        </li>
+        <li class="nav-item nav-item-active">
+          <a class="nav-link" href="members.html">
+            <img src="res/imgs/imageSmallSquare.jpg" alt="">
+            <span>Members</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">
+            <img src="res/imgs/imageSmallSquare.jpg" alt="">
+            <span>News & Announcements</span>
+          </a>
+          <ul class="nav-dropdown">
+            <li class="nav-item">
+              <a class="nav-link" href="newsfeed.html">
+                <img src="res/imgs/imageSmallSquare.jpg" alt="">
+                <span>News Feed</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="announcements.html">
+                <img src="res/imgs/imageSmallSquare.jpg" alt="">
+                <span>Announcements</span>
+              </a>
+            </li>
+           </ul>
+        </li>
+        <li class="nav-item nav-bottom">
+          <a class="nav-link" href="#">
+            <img src="res/imgs/imageSmallSquare.jpg" alt="">
+            <span>Logout</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
     <header>
-		
+
     </header>
 
   </body>
