Wireframe for Newsfeed WIP
Wireframe for Newsfeed.html is WIP.
The nav links are always being fixed

--- a/members.html
+++ b/members.html
@@ -19,14 +19,20 @@
             <span>Home</span>
           </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">
+        <li class="nav-item nav-item-active">
+          <a class="nav-link" href="members.html">
             <img src="res/imgs/imageSmallSquare.jpg" alt="">
             <span>Members</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="newsfeed.html">
+            <img src="res/imgs/imageSmallSquare.jpg" alt="">
+            <span>News & Announcements</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="members.html">
             <img src="res/imgs/imageSmallSquare.jpg" alt="">
             <span>Events</span>
           </a>
