--- a/announcements.html
+++ b/announcements.html
@@ -26,7 +26,7 @@
           </a>
         </li>
         <li class="nav-item nav-item-active">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="announcements.html">
             <img src="res/imgs/imageSmallSquare.jpg" alt="">
             <span>News & Announcements</span>
           </a>
@@ -44,6 +44,12 @@
               </a>
             </li>
            </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="members.html">
+            <img src="res/imgs/imageSmallSquare.jpg" alt="">
+            <span>Events</span>
+          </a>
         </li>
         <li class="nav-item nav-bottom">
           <a class="nav-link" href="#">
