--- a/members.html
+++ b/members.html
@@ -45,7 +45,7 @@
         </li>
       </ul>
     </nav>
-    <main>
+    <main id="main-members">
       <section id="memberApproval">
         <div class="sectionHeader">
           <h1>Awaiting Approval</h1>
