--- a/members.html
+++ b/members.html
@@ -53,18 +53,18 @@
         <table>
           <thead>
             <tr>
-              <th>Picture</th>
+              <th class="pictureCell">Picture</th>
               <th>Name</th>
               <th>Age</th>
               <th>Gender</th>
               <th>Email</th>
-              <th>Reason for Joining</th>
+              <th class="textCell">Reason for Joining</th>
               <th>Status</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td><img src="res/imgs/imageSmallSquare.jpg" alt="profilePicture"></td>
+              <td><img class="rounded" src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
               <td>John Smith</td>
               <td>18</td>
               <td>Male</td>
@@ -78,7 +78,7 @@
               </td>
             </tr>
             <tr>
-              <td><img src="res/imgs/imageSmallSquare.jpg" alt="profilePicture"></td>
+              <td><img class="rounded"  src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
               <td>John Smith</td>
               <td>18</td>
               <td>Male</td>
@@ -101,7 +101,7 @@
         <table>
           <thead>
             <tr>
-              <th>Picture</th>
+              <th class="pictureCell">Picture</th>
               <th>Name</th>
               <th>Email</th>
               <th>Date Joined</th>
@@ -111,119 +111,80 @@
           </thead>
           <tbody>
             <tr>
-              <td><img src="res/imgs/imageSmallSquare.jpg" alt="profilePicture"></td>
+              <td><img class="rounded" src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
               <td>John Smith</td>
               <td>Loremipsum@dolol.sit</td>
               <td>01/01/1970</td>
-              <td class="active">Active</td>
+              <td><span class="active">Active</span></td>
               <td>
                 <div class="buttonGroup">
-                  <button class="btn-edit" type="button" name="button"><a href="memberProfile.html">Edit</a></button>
-                  <button class="btn-deny" type="button" name="button">Delete</button>
+                  <button class="btn-edit" type="button" name="editProfile"><a href="memberProfile.html">Edit</a></button>
+                  <button class="btn-deny" type="button" name="deleteMember">Delete</button>
                 </div>
               </td>
             </tr>
             <tr>
-              <td><img src="res/imgs/imageSmallSquare.jpg" alt="profilePicture"></td>
+              <td><img class="rounded" src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
               <td>John Smith</td>
               <td>Loremipsum@dolol.sit</td>
               <td>01/01/1970</td>
-              <td class="semi-active">Semi-Active</td>
+              <td><span class="semi-active">Semi-Active</span></td>
               <td>
                 <div class="buttonGroup">
-                  <button class="btn-edit" type="button" name="button"><a href="memberProfile.html">Edit</a></button>
-                  <button class="btn-deny" type="button" name="button">Delete</button>
+                  <button class="btn-edit" type="button" name="editProfile"><a href="memberProfile.html">Edit</a></button>
+                  <button class="btn-deny" type="button" name="deleteMember">Delete</button>
                 </div>
               </td>
             </tr>
             <tr>
-              <td><img src="res/imgs/imageSmallSquare.jpg" alt="profilePicture"></td>
+              <td><img class="rounded" src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
               <td>John Smith</td>
               <td>Loremipsum@dolol.sit</td>
               <td>01/01/1970</td>
-              <td class="inactive">InActive</td>
+              <td><span class="inactive">Inactive</span></td>
               <td>
                 <div class="buttonGroup">
-                  <button class="btn-edit" type="button" name="button"><a href="memberProfile.html">Edit</a></button>
-                  <button class="btn-deny" type="button" name="button">Delete</button>
+                  <button class="btn-edit" type="button" name="editProfile"><a href="memberProfile.html">Edit</a></button>
+                  <button class="btn-deny" type="button" name="deleteMember">Delete</button>
                 </div>
               </td>
             </tr>
             <tr>
-              <td><img src="res/imgs/imageSmallSquare.jpg" alt="profilePicture"></td>
+              <td><img class="rounded" src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
               <td>John Smith</td>
               <td>Loremipsum@dolol.sit</td>
               <td>01/01/1970</td>
-              <td class="active">Active</td>
+              <td><span class="active">Active</span></td>
               <td>
                 <div class="buttonGroup">
-                  <button class="btn-edit" type="button" name="button"><a href="memberProfile.html">Edit</a></button>
-                  <button class="btn-deny" type="button" name="button">Delete</button>
+                  <button class="btn-edit" type="button" name="editProfile"><a href="memberProfile.html">Edit</a></button>
+                  <button class="btn-deny" type="button" name="deleteMember">Delete</button>
                 </div>
               </td>
             </tr>
             <tr>
-              <td><img src="res/imgs/imageSmallSquare.jpg" alt="profilePicture"></td>
+              <td><img class="rounded" src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
               <td>John Smith</td>
               <td>Loremipsum@dolol.sit</td>
               <td>01/01/1970</td>
-              <td class="semi-active">Semi-Active</td>
+              <td><span class="active">Active</span></td>
               <td>
                 <div class="buttonGroup">
-                  <button class="btn-edit" type="button" name="button"><a href="memberProfile.html">Edit</a></button>
-                  <button class="btn-deny" type="button" name="button">Delete</button>
+                  <button class="btn-edit" type="button" name="editProfile"><a href="memberProfile.html">Edit</a></button>
+                  <button class="btn-deny" type="button" name="deleteMember">Delete</button>
                 </div>
               </td>
             </tr>
             <tr>
-              <td><img src="res/imgs/imageSmallSquare.jpg" alt="profilePicture"></td>
+              <td><img class="rounded" src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
               <td>John Smith</td>
               <td>Loremipsum@dolol.sit</td>
               <td>01/01/1970</td>
-              <td class="inactive">InActive</td>
+              <td><span class="semi-active">Active</span></td>
               <td>
                 <div class="buttonGroup">
-                  <button class="btn-edit" type="button" name="button"><a href="memberProfile.html">Edit</a></button>
-                  <button class="btn-deny" type="button" name="button">Delete</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td><img src="res/imgs/imageSmallSquare.jpg" alt="profilePicture"></td>
-              <td>John Smith</td>
-              <td>Loremipsum@dolol.sit</td>
-              <td>01/01/1970</td>
-              <td class="active">Active</td>
-              <td>
-                <div class="buttonGroup">
-                  <button class="btn-edit" type="button" name="button"><a href="memberProfile.html">Edit</a></button>
-                  <button class="btn-deny" type="button" name="button">Delete</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td><img src="res/imgs/imageSmallSquare.jpg" alt="profilePicture"></td>
-              <td>John Smith</td>
-              <td>Loremipsum@dolol.sit</td>
-              <td>01/01/1970</td>
-              <td class="semi-active">Semi-Active</td>
-              <td>
-                <div class="buttonGroup">
-                  <button class="btn-edit" type="button" name="button"><a href="memberProfile.html">Edit</a></button>
-                  <button class="btn-deny" type="button" name="button">Delete</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td><img src="res/imgs/imageSmallSquare.jpg" alt="profilePicture"></td>
-              <td>John Smith</td>
-              <td>Loremipsum@dolol.sit</td>
-              <td>01/01/1970</td>
-              <td class="inactive">InActive</td>
-              <td>
-                <div class="buttonGroup">
-                  <button class="btn-edit" type="button" name="button"><a href="memberProfile.html">Edit</a></button>
-                  <button class="btn-deny" type="button" name="button">Delete</button>
+                  <button class="btn-edit" type="button" name="editProfile"><a href="memberProfile.html">Edit</a></button>
+                  <button class="btn-deny" type="button" name="deleteMember">Delete</button>
                 </div>
               </td>
             </tr>
