--- a/memberProfile.html
+++ b/memberProfile.html
@@ -1,69 +1,74 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Profile | OUWC</title>
-    <link rel="stylesheet" href="res/css/style.css">
-  </head>
-  <body>
-    <nav class="nav-mainMenu">
-      <ul class="nav">
-        <li class="nav-logo">
-          <a href="#">
-            <img src="res/imgs/imageLargeSquare.jpg" alt="">
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">
-            <img src="res/imgs/imageSmallSquare.jpg" alt="">
-            <span>Home</span>
-          </a>
-        </li>
-        <li class="nav-item nav-item-active">
-          <a class="nav-link" href="members.html">
-            <img src="res/imgs/imageSmallSquare.jpg" alt="">
-            <span>Members</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="newsfeed.html">
-            <img src="res/imgs/imageSmallSquare.jpg" alt="">
-            <span>News & Announcements</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">
-            <img src="res/imgs/imageSmallSquare.jpg" alt="">
-            <span>Events</span>
-          </a>
-        </li>
-        <li class="nav-item nav-bottom">
-          <a class="nav-link" href="#">
-            <img src="res/imgs/imageSmallSquare.jpg" alt="">
-            <span>Logout</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
-    <main class="container">
-      <section id="editProfile">
-        <div class="sectionHeader">
-          <h1>Edit Profile</h1>
-        </div>
-        <div class="profileContent">
-          <img class="rounded" src="res/imgs/imageLargeSquare.jpg" alt="profile picture">
-          <div class="userInformation">
+
+<head>
+  <meta charset="utf-8">
+  <title>Profile | OUWC</title>
+  <link rel="stylesheet" href="res/css/style.css">
+</head>
+
+<body>
+  <nav class="nav-mainMenu">
+    <ul class="nav">
+      <li class="nav-logo">
+        <a href="#">
+          <img src="res/imgs/imageLargeSquare.jpg" alt="">
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          <img src="res/imgs/imageSmallSquare.jpg" alt="">
+          <span>Home</span>
+        </a>
+      </li>
+      <li class="nav-item nav-item-active">
+        <a class="nav-link" href="members.html">
+          <img src="res/imgs/imageSmallSquare.jpg" alt="">
+          <span>Members</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="newsfeed.html">
+          <img src="res/imgs/imageSmallSquare.jpg" alt="">
+          <span>News & Announcements</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          <img src="res/imgs/imageSmallSquare.jpg" alt="">
+          <span>Events</span>
+        </a>
+      </li>
+      <li class="nav-item nav-bottom">
+        <a class="nav-link" href="#">
+          <img src="res/imgs/imageSmallSquare.jpg" alt="">
+          <span>Logout</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
+  <main class="container">
+    <section id="editProfile">
+      <div class="sectionHeader">
+        <h1>Edit Profile</h1>
+      </div>
+      <div class="profileContent">
+        <img class="rounded" src="res/imgs/imageLargeSquare.jpg" alt="profile picture">
+        <div class="userInformation">
+          <div class="row">
             <div class="input-group">
-              <span>Name</span>
-              <input type="text" name="" value="John Smuth">
+              <span>First Name</span>
+              <input type="text" name="" value="John">
             </div>
+            <div class="input-group">
+              <span>Last Name</span>
+              <input type="text" name="" value="Smith">
+            </div>
+          </div>
+          <div class="row">
             <div class="input-group">
               <span>Age</span>
               <input type="text" name="" value="18">
-            </div>
-            <div class="input-group">
-              <span>Email</span>
-              <input type="text" name="" value="loremipsum@dolor.sit">
             </div>
             <div class="input-group">
               <span>Activity</span>
@@ -74,104 +79,115 @@
               </select>
             </div>
           </div>
+          <div class="input-group">
+            <span>Email</span>
+            <input type="text" name="" value="loremipsum@dolor.sit">
+          </div>
           <div class="buttonGroup">
-            <button class="btn-approve bg-stretch" type="button" name="button">Save</button>
-            <button class="btn-edit bg-stretch" type="button" name="button">Cancel</button>
+            <button class="btn-approve bg-stretch" type="button" name="saveProfile">Save</button>
+            <button class="btn-edit bg-stretch" type="button" name="cancelChanges">Cancel</button>
+            <button class="btn-deny bg-stretch" type="button" name="deleteProfile">Delete Member</button>
           </div>
         </div>
-      </section>
-      <aside class="profileInformation">
-        <div class="sectionHeader">
-          <h1>Profile Stats</h1>
-        </div>
-        <div class="content-vertical">
-          <figure>
-            <img src="res/imgs/imageWideRectangle.jpg" alt="">
-            <figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit</figcaption>
-          </figure>
-          <figure>
-            <img src="res/imgs/imageWideRectangle.jpg" alt="">
-            <figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit</figcaption>
-          </figure>
-          <figure>
-            <img src="res/imgs/imageWideRectangle.jpg" alt="">
-            <figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit</figcaption>
-          </figure>
-        </div>
-      </aside>
-      <section id="walkingStats">
-        <div class="sectionHeader">
-          <h1>Walking Stats</h1>
-        </div>
-        <div class="content">
-          <table>
-            <thead>
-              <tr>
-                <th>Event</th>
-                <th>Date</th>
-                <th>Distance</th>
-                <th>Time</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Lorem ipsum dolor sit</td>
-                <td>Lorem ipsum dolor sit</td>
-                <td>Lorem ipsum dolor sit</td>
-                <td class="inactive">Lorem ipsum dolor sit</td>
-              </tr>
-              <tr>
-                <td>Lorem ipsum dolor sit</td>
-                <td>Lorem ipsum dolor sit</td>
-                <td>Lorem ipsum dolor sit</td>
-                <td>Lorem ipsum dolor sit</td>
-              </tr>
-              <tr>
-                <td>Lorem ipsum dolor sit</td>
-                <td>Lorem ipsum dolor sit</td>
-                <td>Lorem ipsum dolor sit</td>
-                <td>Lorem ipsum dolor sit</td>
-              </tr>
-              <tr>
-                <td>Lorem ipsum dolor sit</td>
-                <td>Lorem ipsum dolor sit</td>
-                <td>Lorem ipsum dolor sit</td>
-                <td>Lorem ipsum dolor sit</td>
-              </tr>
-              <tr>
-                <td>Lorem ipsum dolor sit</td>
-                <td>Lorem ipsum dolor sit</td>
-                <td>Lorem ipsum dolor sit</td>
-                <td>Lorem ipsum dolor sit</td>
-              </tr>
-              <tr>
-                <td>Lorem ipsum dolor sit</td>
-                <td>Lorem ipsum dolor sit</td>
-                <td>Lorem ipsum dolor sit</td>
-                <td>Lorem ipsum dolor sit</td>
-              </tr>
-              <tr>
-                <td>Lorem ipsum dolor sit</td>
-                <td>Lorem ipsum dolor sit</td>
-                <td>Lorem ipsum dolor sit</td>
-                <td>Lorem ipsum dolor sit</td>
-              </tr>
-              <tr>
-                <td>Lorem ipsum dolor sit</td>
-                <td>Lorem ipsum dolor sit</td>
-                <td>Lorem ipsum dolor sit</td>
-                <td>Lorem ipsum dolor sit</td>
-              </tr>
-              <tr>
-                <td>Lorem ipsum dolor sit</td>
-                <td>Lorem ipsum dolor sit</td>
-                <td>Lorem ipsum dolor sit</td>
-                <td class="active">Lorem ipsum dolor sit</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </section>
-    </main>
-  </body>
+      </div>
+      <div class="sectionFooter"></div>
+    </section>
+    <aside class="profileInformation">
+      <div class="sectionHeader">
+        <h1>Profile Stats</h1>
+      </div>
+      <div class="content-vertical">
+        <figure>
+          <img src="res/imgs/imageWideRectangle.jpg" alt="">
+          <figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit</figcaption>
+        </figure>
+        <figure>
+          <img src="res/imgs/imageWideRectangle.jpg" alt="">
+          <figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit</figcaption>
+        </figure>
+        <figure>
+          <img src="res/imgs/imageWideRectangle.jpg" alt="">
+          <figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit</figcaption>
+        </figure>
+      </div>
+      <div class="sectionFooter"></div>
+    </aside>
+    <section id="walkingStats">
+      <div class="sectionHeader">
+        <h1>Walking Stats</h1>
+      </div>
+      <div class="content">
+        <table>
+          <thead>
+            <tr>
+              <th>Event</th>
+              <th>Date</th>
+              <th>Distance</th>
+              <th>Time</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Lorem ipsum dolor sit</td>
+              <td>Lorem ipsum dolor sit</td>
+              <td>Lorem ipsum dolor sit</td>
+              <td class="inactive">Lorem ipsum dolor sit</td>
+            </tr>
+            <tr>
+              <td>Lorem ipsum dolor sit</td>
+              <td>Lorem ipsum dolor sit</td>
+              <td>Lorem ipsum dolor sit</td>
+              <td>Lorem ipsum dolor sit</td>
+            </tr>
+            <tr>
+              <td>Lorem ipsum dolor sit</td>
+              <td>Lorem ipsum dolor sit</td>
+              <td>Lorem ipsum dolor sit</td>
+              <td>Lorem ipsum dolor sit</td>
+            </tr>
+            <tr>
+              <td>Lorem ipsum dolor sit</td>
+              <td>Lorem ipsum dolor sit</td>
+              <td>Lorem ipsum dolor sit</td>
+              <td>Lorem ipsum dolor sit</td>
+            </tr>
+            <tr>
+              <td>Lorem ipsum dolor sit</td>
+              <td>Lorem ipsum dolor sit</td>
+              <td>Lorem ipsum dolor sit</td>
+              <td>Lorem ipsum dolor sit</td>
+            </tr>
+            <tr>
+              <td>Lorem ipsum dolor sit</td>
+              <td>Lorem ipsum dolor sit</td>
+              <td>Lorem ipsum dolor sit</td>
+              <td>Lorem ipsum dolor sit</td>
+            </tr>
+            <tr>
+              <td>Lorem ipsum dolor sit</td>
+              <td>Lorem ipsum dolor sit</td>
+              <td>Lorem ipsum dolor sit</td>
+              <td>Lorem ipsum dolor sit</td>
+            </tr>
+            <tr>
+              <td>Lorem ipsum dolor sit</td>
+              <td>Lorem ipsum dolor sit</td>
+              <td>Lorem ipsum dolor sit</td>
+              <td>Lorem ipsum dolor sit</td>
+            </tr>
+            <tr>
+              <td>Lorem ipsum dolor sit</td>
+              <td>Lorem ipsum dolor sit</td>
+              <td>Lorem ipsum dolor sit</td>
+              <td class="active">Lorem ipsum dolor sit</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="sectionFooter"></div>
+
+    </section>
+  </main>
+</body>
+
 </html>
