--- a/newsfeed.html
+++ b/newsfeed.html
@@ -104,7 +104,7 @@
                   <span>Title</span>
                   <input type="text" name="" value="Roe Green">
                 </div>
-                <div class="input-group input-group-vertical">
+                <div class="input-group-vertical">
                   <span class="span-top">Content</span>
                   <div class="container">
                     <textarea name="name" rows="6" cols="120">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</textarea>
