Updating to Specification (1)
Updating certain pages to fufil requirements of specification

--- a/members.html
+++ b/members.html
@@ -56,7 +56,6 @@
               <th class="pictureCell">Picture</th>
               <th>Name</th>
               <th>Age</th>
-              <th>Gender</th>
               <th>Email</th>
               <th class="textCell">Reason for Joining</th>
               <th>Status</th>
@@ -67,7 +66,6 @@
               <td><img class="rounded" src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
               <td>John Smith</td>
               <td>18</td>
-              <td>Male</td>
               <td>loremipsum@latin.ipsum</td>
               <td>Vestibulum in nunc felis. Vestibulum eu risus metus, vitae imperdiet sapien? In aliquam posuere bibendum. Phasellus iaculis, sem ut vulputate porta, arcu urna porta dui, non adipiscing justo augue in elit. Pellentesque ut augue sit amet dui vestibulum ultrices! Fusce sagittis aliquam neque, a congue tellus eleifend ac. Nullam a lobortis diam? Morbi fringilla, ipsum vitae tincidunt consequat; nibh erat posuere augue; rutrum fringilla ipsum neque auctor nisi.</td>
               <td>
@@ -81,7 +79,6 @@
               <td><img class="rounded"  src="res/imgs/imageSquare.jpg" alt="profilePicture"></td>
               <td>John Smith</td>
               <td>18</td>
-              <td>Male</td>
               <td>loremipsum@latin.ipsum</td>
               <td>Vestibulum in nunc felis. Vestibulum eu risus metus, vitae imperdiet sapien? In aliquam posuere bibendum. Phasellus iaculis, sem ut vulputate porta, arcu urna porta dui, non adipiscing justo augue in elit. Pellentesque ut augue sit amet dui vestibulum ultrices! Fusce sagittis aliquam neque, a congue tellus eleifend ac. Nullam a lobortis diam? Morbi fringilla, ipsum vitae tincidunt consequat; nibh erat posuere augue; rutrum fringilla ipsum neque auctor nisi.</td>
               <td>
@@ -93,6 +90,8 @@
             </tr>
           </tbody>
         </table>
+        <div class="sectionFooter"></div>
+
       </section>
       <section id="members">
         <div class="sectionHeader">
@@ -118,7 +117,7 @@
               <td><span class="active">Active</span></td>
               <td>
                 <div class="buttonGroup">
-                  <button class="btn-edit" type="button" name="editProfile"><a href="memberProfile.html">Edit</a></button>
+                  <a class="btn btn-edit" href="memberProfile.html">Manage</a>
                   <button class="btn-deny" type="button" name="deleteMember">Delete</button>
                 </div>
               </td>
@@ -131,7 +130,7 @@
               <td><span class="semi-active">Semi-Active</span></td>
               <td>
                 <div class="buttonGroup">
-                  <button class="btn-edit" type="button" name="editProfile"><a href="memberProfile.html">Edit</a></button>
+                  <a class="btn btn-edit" href="memberProfile.html">Manage</a>
                   <button class="btn-deny" type="button" name="deleteMember">Delete</button>
                 </div>
               </td>
@@ -144,7 +143,7 @@
               <td><span class="inactive">Inactive</span></td>
               <td>
                 <div class="buttonGroup">
-                  <button class="btn-edit" type="button" name="editProfile"><a href="memberProfile.html">Edit</a></button>
+                  <a class="btn btn-edit" href="memberProfile.html">Manage</a>
                   <button class="btn-deny" type="button" name="deleteMember">Delete</button>
                 </div>
               </td>
@@ -157,7 +156,7 @@
               <td><span class="active">Active</span></td>
               <td>
                 <div class="buttonGroup">
-                  <button class="btn-edit" type="button" name="editProfile"><a href="memberProfile.html">Edit</a></button>
+                  <a class="btn btn-edit" href="memberProfile.html">Manage</a>
                   <button class="btn-deny" type="button" name="deleteMember">Delete</button>
                 </div>
               </td>
@@ -170,7 +169,7 @@
               <td><span class="active">Active</span></td>
               <td>
                 <div class="buttonGroup">
-                  <button class="btn-edit" type="button" name="editProfile"><a href="memberProfile.html">Edit</a></button>
+                  <a class="btn btn-edit" href="memberProfile.html">Manage</a>
                   <button class="btn-deny" type="button" name="deleteMember">Delete</button>
                 </div>
               </td>
@@ -183,13 +182,14 @@
               <td><span class="semi-active">Active</span></td>
               <td>
                 <div class="buttonGroup">
-                  <button class="btn-edit" type="button" name="editProfile"><a href="memberProfile.html">Edit</a></button>
+                  <a class="btn btn-edit" href="memberProfile.html">Manage</a>
                   <button class="btn-deny" type="button" name="deleteMember">Delete</button>
                 </div>
               </td>
             </tr>
           </tbody>
         </table>
+        <div class="sectionFooter"></div>
       </section>
     </main>
   </body>
